# radar-lite-pipeline

radar-lite-pipeline/: CMakeLists.txt  README.md
radar-lite-pipeline/.github/workflows/: ci.yml
radar-lite-pipeline/cpp/: CMakeLists.txt  cfar_ca.cpp  chirp_gen.cpp  fft_wrapper.cpp  main.cpp
radar-lite-pipeline/cpp/include/: cfar_ca.h  chirp_gen.h  fft_wrapper.h  tracker_kf.h  types.h
radar-lite-pipeline/docs/: algorithms.md  architecture.md
radar-lite-pipeline/python/: visualize.py
radar-lite-pipeline/tests/: CMakeLists.txt  test_cfar.cpp  test_tracker.cpp
